--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 @font-face{
     font-family:font;
-    src: url(/assets/font/oriya.ttc);
+    src: url('../assets/font/oriya.ttc');
     }
 
 html,
