--- a/views/m-pfund.html
+++ b/views/m-pfund.html
@@ -22,7 +22,7 @@
 <body>
 
   <div id="sht" class="com split right">
-    <video id="measles-public-fund" controls autoplay loop infinite="controls">
+    <video id="measles-public-fund" controls autoplay loop infinite muted="controls">
 
       <source src="../assets/source/c-pfund.mp4" type="video/mp4">
     </video>
