--- a/assets/css/sketch2.css
+++ b/assets/css/sketch2.css
@@ -9,7 +9,7 @@ html{
         height: 100%;
         margin:0;
         height:100%;
-        font-family: font;
+        font-family: 'Belleza', sans-serif;
         background-image:url("assets/images/export.png");
 }
 
