--- a/assets/css/research.css
+++ b/assets/css/research.css
@@ -7,6 +7,7 @@
 html{
     margin: 10px;
     background-color:grey;
+    font-family: 'Belleza', sans-serif;
     color:white;
     font-family: font;
     margin-left: 20%;
@@ -41,7 +42,7 @@ img{
 
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
     html{
-        font-family: font;
+        font-family: 'Belleza', sans-serif;
         background-color:grey;
         color:white;
         margin:5%;
