--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -849,7 +849,7 @@ button.swiper-pagination-bullet {
     }
 
     button{
-        font-family:font;
+        font-family: 'Belleza', sans-serif;
         padding:2%;
         text-align:center;
         border-radius:100px;
