--- a/assets/css/sketches.css
+++ b/assets/css/sketches.css
@@ -151,7 +151,7 @@ html{
   }
 
   ul{
-      margin: 0 0 4% 0%
+      margin: 0 0 4% 0%;
       text-align:center;
       font-size:3rem;
       color:white;
