--- a/views/pdensity.html
+++ b/views/pdensity.html
@@ -18,9 +18,9 @@
 <body>
 
   <div style="margin:-10% 0% 10% 0%; padding: 0% 5% 0% 5%; ">
-    <h2 class="font-size: 8rem; position:absolute; color:white;">Population Density</h2>
+    <h2 class="font-size: 8rem; top: 200px; position:absolute; color:white;">Population Density</h2>
     <h2 style="font-size:8rem; font-weight: 200;top: 100px; position:absolute; color:white;">207498 population</h2>
-    <h2 style="top: 1000px; position:absolute; color:white;">1960s</h2>
+    <h2 style="top: 0px; position:absolute; color:white;">1960s</h2>
   </div>
 
   <img src="../assets/images/p-density.png" style="margin:-10px;z-index:-1; width:101vw;">
