--- a/assets/css/sketch2.css
+++ b/assets/css/sketch2.css
@@ -20,6 +20,7 @@ html{
   }
 
   body{
+  
     height:100%;
 
   }
@@ -72,7 +73,7 @@ h2 {
   html{
     margin:0;
     height:100%;
-    font-family: font; 
+    font-family: 'Belleza', sans-serif;
     background-color:#2d4d91;
   }
 
