--- a/views/c-pfund.html
+++ b/views/c-pfund.html
@@ -50,7 +50,7 @@
   </div>
 
   <div class="gone split right">
-    <video width="750vw" height="750vh" controls autoplay loop infinite="controls">
+    <video width="750vw" height="750vh" controls autoplay loop infinite playsinline="controls">
 
       <source src="../assets/source/c-pfund.mp4" type="video/mp4">
     </video>
