--- a/views/drate.html
+++ b/views/drate.html
@@ -22,7 +22,7 @@
 
   <div class="com split right">
 
-    <video id="death" autoplay loop infinite muted="controls" style="margin-right:100px;">
+    <video id="death" autoplay loop infinite muted playsinline="controls" style="margin-right:100px;">
 
       <source src="../assets/source/p-deathrate.mp4" type="video/mp4">
     </video>
