--- a/views/c-pfund.html
+++ b/views/c-pfund.html
@@ -25,7 +25,7 @@
   </nav>
 
   <div id="sht" class="com split right">
-    <video id="c-public-fund" controls autoplay loop infinite muted="controls">
+    <video id="c-public-fund" controls autoplay loop infinite muted playsinline="controls">
 
       <source src="../assets/source/p-cpublicfund.mp4" type="video/mp4">
     </video>
