--- a/assets/css/sketch3.css
+++ b/assets/css/sketch3.css
@@ -42,6 +42,7 @@ img {
 }
 
 #score {
+	font-family: 'Belleza', sans-serif;
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -53,7 +54,7 @@ img {
 	align-items: center;
 	font-family: font;
 	font-size: 5vw;
-    font-weight:700;
+        font-weight:700;
 	color: rgba(0, 0, 0, 0.3);
 }
 
@@ -241,6 +242,7 @@ body {
 	}
 
 	#score {
+		font-family: 'Belleza', sans-serif;
 		width: 100%;
 		height: 100%;
 		position: fixed;
