--- a/assets/css/sketches.css
+++ b/assets/css/sketches.css
@@ -290,7 +290,7 @@ html{
 
   .phone-b {
     font-size:1.5rem;
-    font-family:font;
+    font-family: 'Belleza', sans-serif;
     background-color:transparent;
     padding: 2%;
     color:grey;
@@ -302,7 +302,7 @@ html{
 
   .red-phone-b {
     font-size:1.5rem;
-    font-family:font;
+    font-family: 'Belleza', sans-serif;
     background-color:#fe2400;
     padding: 2%;
     color:white;
@@ -313,8 +313,8 @@ html{
 
   
   .blue-phone-b {
+    font-family: 'Belleza', sans-serif;
     font-size:1.5rem;
-    font-family:font;
     background-color:var(--swiper-color);
     padding: 2%;
     color:white;
