--- a/views/m-vacc.html
+++ b/views/m-vacc.html
@@ -51,7 +51,7 @@
         and being a well-known diseaes, the measle vaccination campaign was sucessful.
 
       </p>
-      <a href="./c-crate.html"><button class="btn" style="z-index:10000;">COVID</button></a>
+      <a href="./c-vacc.html"><button class="btn" style="z-index:10000;">COVID</button></a>
 
     </div>
     <div class="overlay"></div>
